Fix missing margin from code blocks

--- a/src/app.css
+++ b/src/app.css
@@ -122,8 +122,11 @@ div.html-content {
 }
 
 /* Block source code (tagged by pandoc) */
+:not(details) > div.sourceCode {
+    padding: 0 1rem;
+}
+
 pre.sourceCode {
-    margin: 0 auto;
     padding: 1%;
     background-clip: border-box;
     background-color: #e5e5e5;
